force-app/main/default/objects/TT_Story__c/TT_Story__c.object-meta.xml
<CustomObject>
    <label>TT Story</label>
    <nameField>
        <displayFormat>Story-{000}</displayFormat>
        <label>TT Story Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>