force-app/main/default/objects/TT_Story__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builder or learner responsible for this Story</description>
    <inlineHelpText>Builder or learner responsible for this Story</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TT Stories</relationshipLabel>
    <relationshipName>TT_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>