force-app/main/default/objects/TT_Story__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Originating Case if demand-driven</description>
    <inlineHelpText>Originating Case if demand-driven</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TT Stories</relationshipLabel>
    <relationshipName>TT_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>