force-app/main/default/objects/TT_Story__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Governance gate for this Story&apos;s deployment</description>
    <inlineHelpText>Governance gate for this Story&apos;s deployment</inlineHelpText>
    <label>Change Request</label>
    <referenceTo>ChangeRequest</referenceTo>
    <relationshipLabel>TT Stories</relationshipLabel>
    <relationshipName>TT_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>