force-app/main/default/objects/TT_Story__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <description>Used to filter sprint backlog for Trail of Mastery learner eligibility.</description>
    <inlineHelpText>Used to filter sprint backlog for Trail of Mastery learner eligibility.</inlineHelpText>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foundational</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>