force-app/main/default/objects/TT_Story__c/fields/Documentation_Required__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Documentation_Status__c must reach Published before Story can be Done. Default = true</description>
    <inlineHelpText>When true, Documentation_Status__c must reach Published before Story can be Done. Default = true</inlineHelpText>
    <label>Documentation Required</label>
    <type>Checkbox</type>
</CustomField>