force-app/main/default/objects/TT_Story__c/fields/Documentation_Status__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Status__c</fullName>
    <description>Current state of documentation related to the story. Must = Published (or Documentation_Required__c = false) before Status can be set to Completed</description>
    <inlineHelpText>Current state of documentation related to the story. Must = Published (or Documentation_Required__c = false) before Status can be set to Completed</inlineHelpText>
    <label>Documentation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Draft</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>