force-app/main/default/objects/TT_Story__c/fields/Given__c.field-meta.xml
<CustomField>
    <fullName>Given__c</fullName>
    <description>Precondition: &apos;Given a user is logged in as a Change Manager and a Tech Change Case exists&apos;</description>
    <inlineHelpText>Precondition: &apos;Given a user is logged in as a Change Manager and a Tech Change Case exists&apos;</inlineHelpText>
    <label>Given</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>