force-app/main/default/objects/TT_Story__c/fields/Learner_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Learner_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin flags stories appropriate for a Trail of Mastery learner to own. Default = false.</description>
    <inlineHelpText>Admin flags stories appropriate for a Trail of Mastery learner to own. Default = false.</inlineHelpText>
    <label>Learner Eligible</label>
    <type>Checkbox</type>
</CustomField>