force-app/main/default/objects/TT_Story__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Rich Text version of user story and description</description>
    <inlineHelpText>Rich Text version of user story and description</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>