force-app/main/default/objects/TT_Story__c/fields/Ready_for_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Sprint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin marks true when story is refined and safe to pull into sprint planning. Default = false. Backlog view filters on this.</description>
    <inlineHelpText>Admin marks true when story is refined and safe to pull into sprint planning. Default = false. Backlog view filters on this.</inlineHelpText>
    <label>Ready for Sprint</label>
    <type>Checkbox</type>
</CustomField>