force-app/main/default/objects/TT_Story__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <description>Estimated points to complete the work  defined in the story</description>
    <inlineHelpText>Estimated points to complete the work  defined in the story</inlineHelpText>
    <label>Story Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>