force-app/main/default/objects/TT_Story__c/fields/Total_ACs__c.field-meta.xml
<CustomField>
    <fullName>Total_ACs__c</fullName>
    <description>Total acceptance criteria defined for the story</description>
    <inlineHelpText>Total acceptance criteria defined for the story</inlineHelpText>
    <label>Total ACs</label>
    <summaryForeignKey>TT_Acceptance_Criteria__c.TT_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>