force-app/main/default/objects/TT_Story__c/fields/Total_Passed_ACs__c.field-meta.xml
<CustomField>
    <fullName>Total_Passed_ACs__c</fullName>
    <description>Total acceptance criteria defined for the story that have passed</description>
    <inlineHelpText>Total acceptance criteria defined for the story that have passed</inlineHelpText>
    <label>Total Passed ACs</label>
    <summaryFilterItems>
        <field>TT_Acceptance_Criteria__c.Status__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>TT_Acceptance_Criteria__c.TT_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>