force-app/main/default/objects/TT_Story__c/fields/TT_Feature__c.field-meta.xml
<CustomField>
    <fullName>TT_Feature__c</fullName>
    <label>TT Feature</label>
    <referenceTo>TT_Feature__c</referenceTo>
    <relationshipLabel>TT Stories</relationshipLabel>
    <relationshipName>TT_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>