force-app/main/default/objects/TT_Story__c/fields/TT_Sprint__c.field-meta.xml
<CustomField>
    <fullName>TT_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sprint this story is assigned to. Blank = in backlog.</description>
    <inlineHelpText>The sprint this story is assigned to. Blank = in backlog.</inlineHelpText>
    <label>TT Sprint</label>
    <referenceTo>TT_Sprint__c</referenceTo>
    <relationshipLabel>TT Stories</relationshipLabel>
    <relationshipName>TT_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>