force-app/main/default/objects/TT_Story__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <description>As a [role], I want [thing] so that [outcome]</description>
    <inlineHelpText>As a [role], I want [thing] so that [outcome]</inlineHelpText>
    <label>User Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>